k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: go-api
