k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api-dns
      secretName: api-ssl
  rules:
    - host: api-dns
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api
                port:
                  name: http
